@@ -97,6 +97,9 @@ Release 1.3.0 - unreleased
     MAPREDUCE-5405. Job recovery can fail if task log directory symlink from
     prior run still exists. (cnauroth)
 
+    MAPREDUCE-5288. ResourceEstimator#getEstimatedTotalMapOutputSize suffers 
+    from divide by zero issues. (kkambatl via tucu)
+
 Release 1.2.1 - 2013.07.06
 
   INCOMPATIBLE CHANGES
